--- a/argo/swampup23-test-argo.yaml
+++ b/argo/swampup23-test-argo.yaml
@@ -9,7 +9,7 @@ spec:
     server: 'https://kubernetes.default.svc'
   project: default
   source:
-    path: overlays/dev
+    path: overlays/test
     repoURL: 'git@github.com:philipfoster/SwampUP23_Demo_Deployment_Files.git'
     targetRevision: HEAD
   syncPolicy:
